# server/openapi.json
@@ -867,6 +867,129 @@
                 }
             }
         },
+        "/music/searchTips": {
+            "get": {
+                "operationId": "musicSearch.searchTips",
+                "summary": "\u641c\u7d22\u8054\u60f3\u8bcd\uff08\u9177\u6211 openapi searchKey\uff0cRELWORD \u63d0\u53d6\uff09",
+                "tags": [
+                    "MusicSearch"
+                ],
+                "parameters": [
+                    {
+                        "name": "keyword",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "plugName",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/ValidationException"
+                    }
+                }
+            }
+        },
+        "/music/artistAlbumById": {
+            "get": {
+                "operationId": "musicSearch.artistAlbumById",
+                "summary": "\u6b4c\u624b\u8be6\u60c5 + \u5168\u90e8\u4e13\u8f91\uff08\u9177\u6211 r.s artistinfo + albumlist \u805a\u5408\uff09",
+                "tags": [
+                    "MusicSearch"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "plugName",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/ValidationException"
+                    }
+                }
+            }
+        },
+        "/music/albumInfoById": {
+            "get": {
+                "operationId": "musicSearch.albumInfoById",
+                "summary": "\u4e13\u8f91\u8be6\u60c5 + \u66f2\u76ee\u5217\u8868\uff08\u9177\u6211 r.s albuminfo\uff09",
+                "tags": [
+                    "MusicSearch"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "plugName",
+                        "in": "query",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/ValidationException"
+                    }
+                }
+            }
+        },
         "/music/getLyric": {
             "post": {
                 "operationId": "musicSearch.getLyric",
@@ -964,6 +1087,61 @@
                                             ]
                                         }
                                     ]
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "$ref": "#/components/responses/ValidationException"
+                    }
+                }
+            }
+        },
+        "/music/getDownloadUrl": {
+            "post": {
+                "operationId": "musicSearch.getDownloadUrl",
+                "summary": "\u83b7\u53d6\u4e0b\u8f7d/\u8bd5\u542c\u76f4\u94fe\uff08\u9177\u6211 mobi convert_url_with_sign\uff0c\u26a0\ufe0f \u5927\u9646 IP \u533a\u57df\u9650\u5236\uff09\n\u5951\u7ea6\u5bf9\u9f50 SQMusic\uff1aPOST\uff0cbody \u5e26 plugName/id/brType\uff0cbrTypes\uff08\u5b8c\u6574\u6b4c\u66f2\u5bf9\u8c61\uff09\u517c\u5bb9\u63a5\u6536\u4f46\u4e0d\u53c2\u4e0e\u89e3\u6790",
+                "tags": [
+                    "MusicSearch"
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "id": {
+                                        "type": "string"
+                                    },
+                                    "brType": {
+                                        "type": "string"
+                                    },
+                                    "plugName": {
+                                        "type": "string"
+                                    },
+                                    "brTypes": {
+                                        "type": "array",
+                                        "items": {
+                                            "type": "string"
+                                        }
+                                    }
+                                },
+                                "required": [
+                                    "id",
+                                    "brType"
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object"
                                 }
                             }
                         }
